--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gh-pages-demo",
   "version": "0.1.0",
-  "homepage": "https://robzarel.github.io/gh-pages-demo",
+  "homepage": "https://mikemarselis.github.io/gh-pages-demo/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,7 +24,7 @@
     "save-json-api": "node ./src/server/scripts/save-json-api.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "rm -rf build && npm run build",
+    "predeploy": "rimraf -rf build && npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
-    "json-server": "^0.17.3",
+    "json-server": "^0.17.4",
     "node-fs": "^0.1.7",
     "shx": "^0.3.4"
   }
